# wail

./: README.md
example/: components.yaml  wadm.yaml
example/wasm/: wasi_cli@0.2.2.wasm  wasi_http@0.2.2.wasm
wail/: .gitignore  Cargo.toml  wasmcloud.toml
wail/src/: lib.rs
wail/src/cli/: mod.rs
wail/src/core/: decode.rs  mod.rs
wail/src/core/constructor/: link.rs  mod.rs  validation.rs
wail/src/core/resolver/: mod.rs
wail/src/models/: components.rs  mod.rs
wail/wit/: deps.toml  world.wit
wit/subcommand/: subcommand.wit
