[package]
name = "wail"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wadm-types = { git = "https://github.com/LUK3ARK/wadm.git", branch = "main", default-features = false, features = [
    "wasm",
] }
serde_yaml = "0.9.34"
wit-bindgen = { version = "0.24", features = ["default"] }
thiserror = "2.0.3"
anyhow = "1.0.93"
wit-component = "0.221.0"
wit-parser = "0.221.0"
futures-util = "0.3.31"
indexmap = "2.6.0"
tracing = "0.1.41"
